# simple-smtp-relay

./: Cargo.toml  LICENSE  README.md
src/: azure.rs  mail.rs  main.rs  smtp.rs
