[package]
name = "simple_smtp_relay"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5.0"
anyhow = "1.0"
url = "2.4.1"
hmac-sha256 = "1.1.7"
base64 = "0.21.4"
chrono = "0.4.31"
curl = "0.4.44"

[dependencies.uuid]
version = "1.4.1"
features = [ "v4", "fast-rng" ]