[package]
name = "simple_smtp_relay"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
anyhow = "1.0"
url = "2.4"
hmac-sha256 = "1.1"
base64 = "0.21"
chrono = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
reqwest = { version = "0.11", features = [ "blocking" ] }
mailparse = "0.14.0"

[dependencies.uuid]
version = "1.4"
features = [ "v4", "fast-rng" ]