[package]
name = "simple-smtp-relay"
authors = [ "Andres Olivares <andyolivares@gmail.com>" ]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4.5", features = [ "derive" ] }
anyhow = "1.0"
url = "2.5"
hmac-sha256 = "1.1"
base64 = "0.22"
chrono = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
reqwest = { version = "0.12", features = [ "blocking" ] }
mailparse = "0.15.0"
uuid = { version = "1.10", features = [ "v4", "fast-rng" ] }